--- a/app/views/company/user.html.haml
+++ b/app/views/company/user.html.haml
@@ -1,4 +1,6 @@
-= link_to tc(:change_password) ,  {:controller=>:authentication , :action=>:change_password}
+= aclist do |l|
+  - l.action :change_password,  {:controller=>:authentication , :action=>:change_password}
+
 .detail
   = evalue @user, :name
   = evalue @user, :first_name
