--- a/app/views/management/sales_new.html.haml
+++ b/app/views/management/sales_new.html.haml
@@ -6,6 +6,6 @@
       - f.field :sale, :nature, :choices=>SaleOrder.natures, :field=>:radio
     - if session[:sales][:client_id].nil?
       - f.title :client
-      - f.field :sale, :client
+      - f.field :sale, :client_id, :choices=>@current_company.available_entities(:order=>:name).collect{|x| [x.full_name, x.id]}
   .actions
     =submit_tag tg :next
