--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -1,12 +1,13 @@
 =formalize do |f|
   -f.error :entity
-  -f.title lc(:title)
-  -f.field :entity, :nature_id, :choices=>@current_company.entity_natures.find(:all, :order=>:name).collect {|x| [x.name, x.id]}
+  -f.title :title
+  -f.field :entity, :nature_id, :choices=>@current_company.entity_natures.find(:all, :order=>:name).collect {|x| [x.name, x.id]}, :new=>{:action=>:entities_nature_create}
+  -f.field :entity, :language_id, :choices=>Language.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
+  -f.title :details
   -f.field :entity, :code
   -f.field :entity, :born_on
-  -f.field :entity, :dead_on
-  -f.field :entity, :language_id, :choices=>Language.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
+  -#f.field :entity, :dead_on
   -f.field :entity, :website
  
