--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,13 +1,15 @@
-=evalue @entity, :first_name
+= aclist do |l|
+  - l.action :entities_contacts_create
+
 =evalue @entity, :name
+=evalue @entity, :first_name
 =evalue @entity, :code
-=evalue @entity, :born_on
+=evalue @entity, :born_on unless @entity.born_on.blank?
 =evalue @entity, :dead_on unless @entity.dead_on.blank?
 =evalue @entity, :active
-=evalue @entity, :website
-=link_to lc(:back) , :action=>:entities
-.contact
-  =link_to lc(:new_contact) , :action=>:entities_contacts_create , :id=>@id
+=evalue @entity, :website unless @entity.website.blank?
+
+%h2= tc :contacts, :count=>@contacts.size
 =dyta :contacts
 
    
