git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@363 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -17,7 +17,7 @@
   -f.field :contact, :mobile
   -f.field :contact, :email   
   -f.field :contact, :website
-
+=javascript_tag("$('contact_name').focus();")
  
 
 
