--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,5 +1,5 @@
 = aclist do |l|
-  - l.action :entities_contacts_create
+  - l.action :entities_update, :id=>@entity.id
 
 =evalue @entity, :name
 =evalue @entity, :first_name
