--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.error :entity
   -f.title :title
-  -f.field :entity, :nature_id, :choices=>@current_company.entity_natures.find(:all, :order=>:name).collect {|x| [x.name, x.id]}, :new=>{:action=>:entities_nature_create}
+  -f.field :entity, :nature_id, :choices=>@current_company.entity_natures.find(:all, :order=>:name).collect {|x| [x.name, x.id]}, :options=>{:include_blank=>true}, :new=>{:action=>:entities_natures_create}
   -f.field :entity, :language_id, :choices=>Language.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
@@ -10,4 +10,4 @@
   -f.field :entity, :born_on
   -#f.field :entity, :dead_on
   -f.field :entity, :website
- 
+
