git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@373 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/document_prepare.html.haml
+++ b/app/views/accountancy/document_prepare.html.haml
@@ -1,7 +1,7 @@
 -form_tag do
   =formalize do |f|
     -for print in @prints
-      - f.field radio_button(:print , :mode , print[0]), content_tag(:label, lc(print[0].to_sym), {:for=>'print_mode_'+print[0].to_s})
+      - f.field radio_button(:print , :mode , print[0]), content_tag(:label, tc(print[0].to_sym), {:for=>'print_mode_'+print[0].to_s})
   .actions
-    =submit_tag t"next"
+    =submit_tag tg"next"
 
