--- a/app/views/accountancy/_print_by_journal.html.haml
+++ b/app/views/accountancy/_print_by_journal.html.haml
@@ -1,8 +1,8 @@
 =formalize do |f|
-  -f.title lc(:dates)
-  -f.field lc(:from), text_field(:printed, :from, :size=>10)
-  -f.field lc(:to), text_field(:printed, :to, :size=>10)
-  -f.field lc(:journal), select(:printed, :name, @current_company.journals.collect{|p| [p.name, p.id]})
+  -f.title tc("dates")
+  -f.field tc("from"), text_field(:printed, :from, :size=>10)
+  -f.field tc("to"), text_field(:printed, :to, :size=>10)
+  -f.field tc("journal"), select(:printed, :name, @current_company.journals.collect{|p| [p.name, p.id]})
 
        
  
