--- a/app/views/accountancy/_print_date_to_date.html.haml
+++ b/app/views/accountancy/_print_date_to_date.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
-  -f.title lc(:dates)
-  -f.field lc(:from), text_field(:printed, :from, :size=>10)
-  -f.field lc(:to), text_field(:printed, :to, :size=>10)
+  -f.title tc("dates")
+  -f.field tc("from"), text_field(:printed, :from,:value=>@begin.to_s,:size=>10)
+  -f.field tc("to"), text_field(:printed, :to,:value=>@end,:size=>10)
 
   
 
