--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,9 +1,10 @@
 - if @valid
-  %h2=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
+  %h1=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
 - if @valid
   #update_params.aclist
-    =link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();"
-#params.aclist
+    %ul
+      %li=link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();"
+#params.fore
   - form_tag(:action => :params_entries) do
     =formalize do |f|
       - f.field tc(:select_financialyear), select_tag("financialyear_id", options_for_select(@financialyears.collect{|j| [j.code.to_s, j.id.to_s]}, session[:entries][:financialyear].to_s))
