--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -1,17 +1,21 @@
 =sales_steps
 - form_tag do
   =formalize do |f|
+    - f.error 'sale_order'
+    - f.title :client
+    - f.field :sale_order, :client_id, :choices=>@current_company.available_entities(:order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}, :options=>{:include_blank=>true}
     - f.title :conditions
-    - f.field :sale, :nature_id, :choices=>@current_company.sale_order_natures
-    - f.field :sale, :contact_id, :choices=>@entity.contacts.collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@entity.id}
-    - f.field :sale, :invoice_contact_id, :choices=>@entity.contacts.collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@entity.id}
-    - f.field :sale, :delivery_contact_id, :choices=>@entity.contacts.collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@entity.id}
-    - f.field :sale, :comment, :field=>:textarea
+    - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
+    - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create}
+    - f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create}
+    - f.field :sale_order, :invoice_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entities_contacts_create}
+    - f.field :sale_order, :comment, :field=>:textarea
     - f.title :letter
-    - f.field :sale, :subject
-    - f.field :sale, :function_title
-    - f.field :sale, :introduction, :field=>:textarea
-    - f.field :sale, :conclusion, :field=>:textarea
+    - f.field :sale_order, :subject
+    - f.field :sale_order, :function_title
+    - f.field :sale_order, :introduction, :field=>:textarea
+    - f.field :sale_order, :conclusion, :field=>:textarea
   .actions
-    =link_to_back
     =submit_tag tg :next
+=javascript_tag("function update_contacts(value) {new Ajax.Request('/management/sales_contacts', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {$('sale_order_contact_id').update(resp.responseText); $('sale_order_delivery_contact_id').update(resp.responseText); $('sale_order_invoice_contact_id').update(resp.responseText);  }  }); }; /*update_contacts($('sale_order_client_id').value); */")
+=observe_field "sale_order_client_id", :url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
