--- a/app/views/management/_prices_form.html.haml
+++ b/app/views/management/_prices_form.html.haml
@@ -8,10 +8,12 @@
   - f.field :price, :use_range
   - f.field :price, :quantity_min, :html_options=>{:id=>:price_qmin}
   - f.field :price, :quantity_max, :html_options=>{:id=>:price_qmax}
-  - taxes = @price.all_taxes(@current_company, :order=>"taxes.amount")
-  - unless taxes.empty?
-    - f.title :taxes
-    - for tax in taxes
-      - f.field tax.name, check_box_tag("price_tax_#{tax.id.to_s}",1,@price[:used],:name=>"price_tax[#{tax.id.to_s}]")
+  - f.title :taxes
+  - f.field :price, :tax_id, :choices=>@price.all_taxes(@current_company, :order=>"taxes.amount").collect{|x| [x.name, x.id]}
+/  - #taxes = @price.all_taxes(@current_company, :order=>"taxes.amount")
+/  - #unless taxes.empty?
+/    - #for tax in taxes
+/      - #f.field tax.name, check_box_tag("price_tax_#{tax.id.to_s}",1,@price[:used],:name=>"price_tax[#{tax.id.to_s}]")
+
 =javascript_tag("function display_quantities(element) { var qmin=$('price_qmin'); var qmax=$('price_qmax');  if (element.checked) { qmin.show(); qmax.show(); } else { qmin.hide(); qmax.hide(); }; return false; }\ndisplay_quantities($('price_use_range'));")
 =observe_field("price_use_range", :frequency =>0.25, :function => "display_quantities(element);")
