--- a/app/views/accountancy/_journals_closed.html.haml
+++ b/app/views/accountancy/_journals_closed.html.haml
@@ -1,5 +1,5 @@
-if @journal_closed
-  =formalize(:inner_form=>true) do |f|
+- if @journal_closed
+  = formalize do |f|
     - f.title :title
     - f.field :journal, :closed_on
 
