git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@400 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -5,9 +5,13 @@
   -f.field :entity, :language_id, :choices=>Language.find(:all, :order=>:native_name).collect {|x| [x.native_name, x.id]}
   -f.field :entity, :name
   -f.field :entity, :first_name
+  -f.field :entity, :is_client
+  -f.field :entity, :is_supplier
   -f.title :details
   -f.field :entity, :code
   -f.field :entity, :born_on
   -#f.field :entity, :dead_on
   -f.field :entity, :website
-
+  -f.title :complements
+  -for complement in @current_company.complements.find(:all,:order=>:position)
+    -f.field complement.name, :id=>:complement_value[0][decimal_value]
