--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -13,7 +13,7 @@
       =evalue @entity, :website unless @entity.website.blank?
     %td
       -for datum in @entity.complement_data.find(:all, :joins=>"JOIN complements ON (complements.id=complement_id)", :order=>"position")
-        =evalue datum.complement.name, datum.value
+        =evalue datum.complement.name, datum.value.to_s
 
 %h2=tc :contacts, :count=>@contacts.size
 =dyta :contacts
