--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -44,8 +44,8 @@
             %td=entry.account.number
             %td{:align=>"right"}=number_to_currency(entry.currency_debit, :delimiter=>"", :precision => 2, :unit=>"")
             %td{:align=>"right"}=number_to_currency(entry.currency_credit, :delimiter=>"", :precision => 2, :unit=>"")
-            %td.act=link_to "M", :action => "entries_update", :id => entry.id
-            %td.act=link_to_remote "S", :url => {:action => "entries_delete", :id => entry.id}, :method=>:delete, :confirm=>"Are you sure ?" 
+            %td.act=link_to tc(:update), :action => "entries_update", :id => entry.id
+            %td.act=link_to_remote tc (:delete), :url => {:action => "entries", :id => entry.id}, :method=>:delete, :confirm=> tc(:confirm) 
   =#submit_tag # 'entry_validate', lc(:entry_validate), :url => {:action => :entries}, :html => {:tabindex => 7, :style=>'display:none;'}
   =submit_tag 'test', {:tabindex => 7, :style=>'display:none;'}
 
