--- a/app/views/management/_purchase_order_lines_form.html.haml
+++ b/app/views/management/_purchase_order_lines_form.html.haml
@@ -1,5 +1,7 @@
 =formalize do |f|
   -f.error :purchase_order_line
   -f.field :purchase_order_line, :product_id,:choices=>@current_company.available_products.collect{|x| [x.name, x.id]}, :new=>{:action=>:products_create}
+  -f.field :purchase_order_line, :amount, :choices=>@prices_amount
   -f.field :purchase_order_line, :quantity
-  -f.field :purchase_order_line, :account_id, :choices=>@current_company.accounts.collect{|x| [x.label, x.id]}, :new=>{:action=>:accounts_create}
+=javascript_tag("function update_price(value) {new Ajax.Request('/management/find_price', {asynchronous:true, evalScripts:true, parameters:'product_id=' + encodeURIComponent(value), onSuccess: function(resp) {$('purchase_order_line_amount').update(resp.responseText);   }  }); }; /*update_price($('purchase_order_line_product_id').value); */")
+=observe_field "purchase_order_line_product_id", :url=>{:action => :find_price}, :frequency => 0.25, :function=>"update_price(value)"
