--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -4,12 +4,13 @@
     #help-previous.help-link=link_to_remote(content_tag(:div, "&nbsp;"), :url=>{:controller=>:help, :action=>:previous }, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();" ) if session[:help_history].size>1
     %h1.title=tc :title
   .content{:flex=>1, :style=>'overflow:auto;'}
-    - doc=retrieve(@id)
+    - doc=retrieve(@article)
     - if doc.blank?
       .help-error
-        =tc(:error_no_file, :value=>@id)
+        =tc(:error_no_file, :value=>@article)
+        =@article.to_s
       %ul
-        %li=link_to_remote(tc("home"), :url=>{:controller=>:help, :action=>:search, :id=>"guide-index"}, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();" )
+        %li=link_to_remote(tc("home"), :url=>{:controller=>:help, :action=>:search, :article=>"guide-index"}, :update=>:help, :complete=>"resize2();", :loading=>"onLoading();", :loaded=>"onLoaded();" )
     - else
       =doc
     .text-end &nbsp;
