--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -77,7 +77,9 @@ div[xul="box"] { background: #ADA; }
 .help-link > a > div { width: 32px; height:32px; }
 #help-begin { background: url(/images/template/help-begin.png); height:32px; width:16px;}
 #help-web { background: url(/images/template/help-web.png); }
-#help-open { background: url(/images/template/help-open.png); }
+/*#help-open { background: url(/images/template/help-open.png); }*/
+#help-open { padding: 6px 4px;}
+#help-open a { padding: 3px 8px; font-size: 15px; color: red; background:white; border:1px solid #95b0e4; }
 #help-close { background: url(/images/template/help-close.png); }
 #help-previous { background: url(/images/template/help-previous.png); }
 /*.help-t { float:right; margin:20px;}*/
