--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -8,18 +8,18 @@
       %th=tc :account_number
       %th=tc :record_debit
       %th=tc :record_credit
-      %th
-      %th
+      %th{:colspan=>2}
     %tr
       %td=text_field :record, :number, {:size=>5}
       %td=text_field :record, :created_on, {:size=>10}
       %td=text_field :record, :printed_on, {:size=>10} 
-      %td=text_field :entry, :name
+      %td=text_field :entry, :name, {:size=>16}
       %td=text_field :account, :number, {:size=>10} 
       %td=text_field :entry, :currency_debit, {:size=>8}
       %td=text_field :entry, :currency_credit, {:size=>8}
-      %td
-      %td
+      %td{:colspan=>2}
+        =submit_tag tc(:entry_validate), {:tabindex => 7}
+        =#submit_tag # 'entry_validate', lc(:entry_validate), :url => {:action => :entries}, :html => {:tabindex => 7, :style=>'display:none;'}
     %tr
       %td#account{:colspan=>7}
     -if @records.size>0
@@ -46,9 +46,3 @@
             %td{:align=>"right"}=number_to_currency(entry.currency_credit, :delimiter=>"", :precision => 2, :unit=>"")
             %td.act=link_to tc(:update), :action => "entries_update", :id => entry.id
             %td.act=link_to_remote tc (:delete), :url => {:action => "entries", :id => entry.id}, :method=>:delete, :confirm=> tc(:confirm) 
-  =#submit_tag # 'entry_validate', lc(:entry_validate), :url => {:action => :entries}, :html => {:tabindex => 7, :style=>'display:none;'}
-  =submit_tag tc(:entry_validate), {:tabindex => 7}
-
-%ul
-  %li=tc :balanced_entries
-  %li=tc :unbalanced_entries
