git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@442 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_accounts_find.html.haml
+++ b/app/views/accountancy/_accounts_find.html.haml
@@ -13,6 +13,7 @@
             = link_to_function(account.number) do |p| 
               - p['account_number'].value =  account.number 
               - p['entry_currency_debit'].focus()
+              - p['entry_currency_debit'].select
               - p.replace_html 'account', ''
           %td=account.name
   - else
