git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@444 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/statements_point.html.haml
+++ b/app/views/accountancy/statements_point.html.haml
@@ -18,7 +18,7 @@
       %td.fixnum=entry.debit
       %td.fixnum=entry.credit
   %tr
-    %td=tc(:total, @bank_account.name)
+    %td=tc(:total, :value => @bank_account.name)
     %td
     %td
     %td
