--- a/app/views/accountancy/_statements_form.html.haml
+++ b/app/views/accountancy/_statements_form.html.haml
@@ -1,4 +1,4 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
     - f.error :statement
     - f.field :statement, :started_on
     - f.field :statement, :stopped_on
