--- a/app/views/management/_purchase_orders_form.html.haml
+++ b/app/views/management/_purchase_orders_form.html.haml
@@ -1,5 +1,6 @@
 =formalize do |f|
   -f.error :purchase_order
   -f.field :purchase_order, :supplier_id, :choices=>@current_company.available_entities(:conditions=>{:supplier=>true},:order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}, :options=>{:include_blank=>true}
+  -f.field :purchase_order, :dest_contact_id, :choices=>Contact.find(:all, :conditions=>{:entity_id=>@current_company.entity_id}).collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@current_company.entity_id}
   -f.field :purchase_order, :comment
 
