git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@475 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -2,6 +2,7 @@
   - f.error :product
   - f.title :identification
   - f.field :product, :name
+  - f.field :product, :price
   - f.field :product, :code
   - f.field :product, :code2
   - f.field :product, :ean13
