--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -6,6 +6,7 @@
   %tr
     %td
       =evalue @product, :name
+      =evalue @product, :price
       =evalue @product, :code
       =evalue @product, :code2
       =evalue @product, :ean13
