--- a/app/views/management/_prices_form.html.haml
+++ b/app/views/management/_prices_form.html.haml
@@ -2,9 +2,11 @@
   - f.error 'price'
   - f.error 'price_tax'
   - f.title :general
-  - f.field :price, :list_id, :choices=>@current_company.available_price_lists(:order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:price_lists_create}
   - f.field :price, :product_id, :choices=>@current_company.available_products(:order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:products_create}
+  - if @mode != :sales
+    - f.field :price, :entity_id, :choices=>Entity.find(:all, :conditions=>{:supplier=>true}).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations,:action=>:entities_create} 
   - f.field :price, :amount
+  - f.field :price, :currency_id, :choices=>Currency.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id]}
   - f.field :price, :use_range
   - f.field :price, :quantity_min, :html_options=>{:id=>:price_qmin}
   - f.field :price, :quantity_max, :html_options=>{:id=>:price_qmax}
