--- a/app/views/management/_deliveries_form.html.haml
+++ b/app/views/management/_deliveries_form.html.haml
@@ -1,33 +1,42 @@
-%table.dyta
-  %tr
-    %th=" Adresse de livraison : ",select(:contact, :dest,@contacts.collect{|x| [x.address, x.id]})
-    %th=" Expédié le : ",text_field(:date, :ship,:value=>Date.today,:size=>15)
-    %th=" Reçu le : ",text_field(:date, :deliver,:size=>15) 
+=formalize do |f|
+  -f.error :delivery
+  -f.title :infos
+  -f.field :delivery, :contact_id, :choices=>@contacts.collect{|x| [x.address, x.id]}
+  -f.field :delivery, :shipped_on
+  -f.field :delivery, :delivered_on
 %table.dyta 
   %tr
     %th Produit
     %th Montant HT
     %th Montant TTC
     %th Unité
-    %th Quantité 
     %th Quantité totale
     %th Quantité restante
+    %th Quantité
   -x=0
-  -for @line in @sale_order_lines
+  -y=0
+  -for @line in @delivery_lines
     %tr
-      %td=@line.product.name
-      %td=@line.price.amount
-      %td=@line.price.amount_with_taxes
-      %td=@line.unit.name
-      %td{:style=>'text-align:center'}=text_field_tag('delivery_line[]', 'quantity', :id=>"#{@line.order.id}_#{@line.id}" , :value=>@line.undelivered_quantity,:size=>10)
+      %td=@line.order_line.product.name
+      %td=@line.order_line.price.amount
+      %td=@line.order_line.price.amount_with_taxes
+      %td=@line.order_line.unit.name
+      %td{:style=>'text-align:center'}=@line.order_line.quantity
       %td{:style=>'text-align:center'}=@line.quantity
-      %td{:style=>'text-align:center'}=@line.undelivered_quantity
-    =#observe_field "sum_quantity", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"Form.Element.serialize('_sum_quantity')" 
-    =observe_field "#{@line.order.id}_#{@line.id}", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"Form.serialize('#{@delivery_form}')"
+      %td{:style=>'text-align:center'}
+        =text_field_tag "delivery_line[#{@line.order_line_id}][quantity]", @line.quantity, :id=>"delivery_line_#{@line.order_line_id}_quantity"
+        -if @update == true
+          =#text_field_tag('delivery_line[]', 'quantity', :id=>"#{@line.order.id}_#{@line.id}" , :value=>@quantity[y],:size=>10)
+          -y+=1
+        -else
+          =#text_field_tag('delivery_line[]', 'quantity', :id=>"#{@line.order.id}_#{@line.id}" , :value=>@line.undelivered_quantity,:size=>10)
+      =observe_field "delivery_line_#{@line.order_line.id}_quantity", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"Form.serialize('#{@delivery_form}')"
   -x+=1
 %table.dyta
   %tr
-    %td{:style=>'text-align:right'}= "Total de la livraison HT : ",text_field(:sum, :total_ht,:value=>@total_ht,:size=>10)
-    %td{:style=>'text-align:right'}= "TTC : ",text_field(:sum, :total,:value=>@total,:size=>10)
-=#observe_field "date_ship", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"date_ship" 
+    %td{:style=>'text-align:right'}= "Total de la livraison HT : "
+    %td#sum_total_ht=@delivery.amount
+    %td{:style=>'text-align:right'}= "TTC : "
+    %td#sum_total=@delivery.amount_with_taxes
+
 
