--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -3,49 +3,43 @@
 = aclist do |l|
   - l.action :sales_print, :id=>@sale_order.id
 
+%h2=tc :undelivered
+=dyta :undelivered_quantities
 %h2=tc :deliveries
 %table.dyta
   %tr
-    %td.procedures{:colspan=>8} 
+    %td.procedures{:colspan=>9} 
       =link_to "Ajouter une livraison", :action=>:deliveries_create
+  %tr
+    %th
+    %th= tc 'supply'
+    %th= tc 'ship'
+    %th= tc 'deliver'
+    %th= tc 'quantity'
+    %th= tc 'amount'
+    %th= tc 'amount_with_taxes'
+    %th
   -for delivery in @deliveries
-    %tr
-      %th= tc 'address'
-      %th= tc 'ship'
-      %th= tc 'deliver'
-      %th= tc 'amount'
-      %th= tc 'amount_with_taxes'
-      %th= link_to tg 'update', :action=>:deliveries_update
-    %tr
-      %td= delivery.contact.address
+    -klass=cycle("odd","even")
+    %tr{:class=>klass+' root'}
+      %td{:colspan=>2}= delivery.contact.address
       %td= delivery.shipped_on
       %td= delivery.delivered_on
+      %td
       %td= delivery.amount
       %td= delivery.amount_with_taxes
- 
-    %tr{:colspan=>6} 
-      %th Produit
-      %th Unité
-      %th Prix unitaire HT
-      %th Prix unitaire TTC
-      %th Quantité 
-      %th Montant HT
-      %th Montant TTC
-      %th Quantité totale
-      %th Quantité restante
+      %td
+        = link_to tg('update'), :action=>:deliveries_update, :line=>delivery.id
+        = link_to tg('delete'), :action=>:deliveries_delete, :id=>delivery.id
     - for lines in @delivery_lines
       -if lines.delivery_id == delivery.id and lines.quantity > 0
-        %tr
-          %td= lines.product.name
-          %td= lines.unit.name
-          %td= lines.price.amount
-          %td= lines.price.amount_with_taxes
+        %tr{:class=>klass}
+          %td{:style=>'width:20px'} 
+          %td{:colspan=>3}= lines.product.name
           %td= lines.quantity
           %td= lines.amount
           %td= lines.amount_with_taxes
-          %td= lines.order_line.quantity
-          %td= lines.undelivered_quantity
-
+          %td
 - form_tag do
   .actions
     =link_to tg(:previous), :action=>:sales_products
